# mxyz

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  README.org  Rocket.toml  docker-compose.yaml  rust-toolchain.toml
mxyz-client/: Cargo.toml
mxyz-client/.cargo/: config
mxyz-client/src/: client.rs  lib.rs  test_01.rs  websocket_client.rs
mxyz-client/src/components/canvas/: mod.rs
mxyz-client/src/config/: mod.rs
mxyz-client/src/renderer/: mod.rs
mxyz-client/src/tmp/: mod.rs
mxyz-client/src/utils/dom/: canvas.rs  console.rs  mod.rs
mxyz-client/src/websocket/: client.rs  mod.rs
mxyz-database/: Cargo.toml
mxyz-database/migrations/2022-06-16-000559_migration_v1/: down.sql  up.sql
mxyz-database/src/: lib.rs  models.rs
mxyz-database/src/models/: mod.rs
mxyz-database/src/models/client/: mod.rs
mxyz-database/src/models/engine/: mod.rs
mxyz-database/src/models/entity_v1/: mod.rs
mxyz-database/src/models/planet/: mod.rs
mxyz-database/src/models/state/: mod.rs
mxyz-database/src/models/system/: mod.rs
mxyz-engine/: Cargo.toml  README.org
mxyz-engine/src/: dev_utils.rs  engine.rs  lib.rs  main.rs  tmp.rs
mxyz-engine/src/config/: mod.rs
mxyz-engine/src/config/system/: mod.rs
mxyz-engine/src/engine/: mod.rs
mxyz-engine/src/integrator/: mod.rs
mxyz-engine/src/integrator/runge_kutta/: mod.rs
mxyz-engine/src/interaction/: interaction_matrix.rs  mod.rs  testing.rs
mxyz-engine/src/interaction/composed/: mod.rs
mxyz-engine/src/interaction/diffusion_v1/: mod.rs
mxyz-engine/src/interaction/force/: mod.rs
mxyz-engine/src/interaction/ising_v1/: mod.rs
mxyz-engine/src/neighborhood/: mod.rs
mxyz-engine/src/preset/: mod.rs
mxyz-engine/src/preset/three_body_figure_eight/: mod.rs
mxyz-engine/src/preset/three_body_moon/: mod.rs
mxyz-engine/src/state/preset/: mod.rs
mxyz-network/: Cargo.toml
mxyz-network/src/: lib.rs
mxyz-network/src/message/: mod.rs
mxyz-network/src/mpsc/: mod.rs
mxyz-network/src/package/: mod.rs
mxyz-network/src/package/command/: mod.rs
mxyz-network/src/package/request/: mod.rs
mxyz-network/src/package/response/: mod.rs
mxyz-network/src/tcp/: mod.rs  server.rs
mxyz-network/src/tcp_pkg/response/: mod.rs
mxyz-server/: Cargo.toml
mxyz-server/migrations/2022-06-16-000559_migration_v1/: down.sql  up.sql
mxyz-server/src/: lib.rs  main.rs  server.rs  tcp.rs
mxyz-server/src/bytestream_protocol/: mod.rs
mxyz-server/src/engine/: mod.rs  runner.rs
mxyz-server/src/http/: mod.rs
mxyz-server/src/http/index/: mod.rs
mxyz-server/src/http/simulation/: mod.rs  utils.rs
mxyz-server/src/misc/: cors.rs
mxyz-server/src/routes/: mod.rs
mxyz-server/src/routes/error/: not_found.rs
mxyz-server/src/routes/simulation/: mod.rs
mxyz-server/src/tcp/: mod.rs  server.rs
mxyz-server/src/views/: mod.rs
mxyz-server/src/views/index/: mod.rs
mxyz-server/src/views/simulation/: mod.rs
mxyz-server/static/css/: base.css  canvas.css  section.css
mxyz-server/static/css/index/: base.css  navgrid.css  navgrid_cell.css  navgrid_section.css  navgrid_thumbnail.css
mxyz-server/static/css/simulation/: _old.css  base.css
mxyz-server/static/js/simulation/: base.js
mxyz-server/templates/: base.html.tera
mxyz-server/templates/error/: 404.html.tera
mxyz-server/templates/index/: base.html.tera  navgrid.html.tera
mxyz-server/templates/simulation/: base.html.tera
src/: Cargo.toml  Dockerfile  Makefile
src/mxyz-client/: Cargo.toml
src/mxyz-client-engine/: Cargo.toml
src/mxyz-client-engine/src/: lib.rs
src/mxyz-client-engine/src/engine/: mod.rs
src/mxyz-client/src/: client.rs  lib.rs
src/mxyz-client/src/client/: engine_client_v1.rs  engine_client_v2.rs  engine_renderer_client_v2.rs  engine_runner_client_v1.rs  mod.rs  runner_client_v1.rs
src/mxyz-client/src/config/: mod.rs
src/mxyz-client/src/engine/: mod.rs
src/mxyz-client/src/renderer/: mod.rs
src/mxyz-client/src/websocket/: client.rs
src/mxyz-client/tests/: test_01.rs
src/mxyz-client2/: Cargo.toml  Trunk.toml  index.html
src/mxyz-client2/src/: lib.rs  main.rs
src/mxyz-client2/src/components/: app.rs  mod.rs
src/mxyz-database/: Cargo.toml
src/mxyz-database/migrations/2022-06-16-000559_migration_v1/: down.sql  up.sql
src/mxyz-database/src/: lib.rs
src/mxyz-database/src/models/: mod.rs
src/mxyz-engine/: .gitignore  Cargo.toml
src/mxyz-engine-base/: Cargo.toml
src/mxyz-engine-universe/: Cargo.toml
src/mxyz-engine-universe/src/: lib.rs
src/mxyz-engine-universe/src/entity/: mod.rs
src/mxyz-engine-universe/src/integrator/: mod.rs
src/mxyz-engine-v1/: Cargo.toml
src/mxyz-engine-v1/src/: lib.rs
src/mxyz-engine-v2/: Cargo.toml
src/mxyz-engine-v2/src/: lib.rs  main.rs
src/mxyz-engine/src/: lib.rs  main.rs
src/mxyz-engine/src/config/: constants.rs  engine_runner_variant.rs  export_variant.rs  mod.rs  simulation_variant.rs
src/mxyz-engine/src/engine/: mod.rs
src/mxyz-engine/src/entity/: attribute.rs  entity_v1.rs  mod.rs
src/mxyz-engine/src/integrator/: mod.rs
src/mxyz-engine/src/interaction/: interaction_matrix.rs  interaction_variant.rs  mod.rs
src/mxyz-engine/src/neighborhoods/: mod.rs
src/mxyz-engine/src/state/: mod.rs  state.rs  state_query.rs
src/mxyz-engine/src/system/: mod.rs  sized.rs  system.rs
src/mxyz-network/: Cargo.toml
src/mxyz-network/src/: lib.rs
src/mxyz-network/src/mpsc_msg/: mod.rs
src/mxyz-network/src/tcp_pkg/: mod.rs
src/mxyz-server/: Cargo.toml
src/mxyz-server-engine/: Cargo.toml
src/mxyz-server-engine/src/: lib.rs  main.rs
src/mxyz-server-engine/src/engine/: mod.rs
src/mxyz-server/src/: lib.rs  main.rs
src/mxyz-server/src/engine/: engine_runner_v2.rs  mod.rs  runner.rs
src/mxyz-server/src/engine_runner_v2/: mod.rs
src/mxyz-server/src/http/: mod.rs
src/mxyz-server/src/server/: mod.rs
src/mxyz-server/src/tcp/: mod.rs  server.rs
src/mxyz-server/static/css/: base.css  canvas.css  section.css
src/mxyz-server/templates/: yew_index.html.tera
src/mxyz-utils/: Cargo.toml
src/utils/: Cargo.toml
(+170 files in other folders)
