[workspace]
    default-members=[
        "mxyz-engine",  
        # "mxyz-server",
    ]
    members = [
        "mxyz-client",
        "mxyz-config",
        "mxyz-database",
        "mxyz-engine",
        # "mxyz-network",
        # "mxyz-universe",
        "mxyz-server",
        "mxyz-utils",
    ]
