[package]
    name = "mxyz-client"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"

[lib]           
    crate-type = [
        "cdylib",  # for wasm
        "rlib"     # for wasm-testing
    ]  

[dependencies]
    # mxyz-engine = { path = "../mxyz-engine" }
    # mxyz-utils = { path = "../mxyz-utils" }
    console_error_panic_hook = { version = "0.1.6", optional = true }
    wee_alloc = { version = "0.4.2", optional = true }
    js-sys = "0.3.51"
    wasm-bindgen = { version = "^0.2", features = ["nightly", "serde-serialize"] }
    wasm-bindgen-futures = "0.4"
    reqwest = "0.11.11"

[dependencies.web-sys]
    version = "0.3.55"
    features = [
        'CanvasRenderingContext2d',
        # 'CssStyleDeclaration',
        'Document',
        'Element',
        # 'EventListener',
        # 'EventTarget',
        # 'HtmlButtonElement',
        'HtmlCanvasElement',
        'HtmlElement',
        # 'HtmlOptionElement',
        # 'HtmlParagraphElement',
        # 'MouseEvent',
        'Node',
        'Window',
        'console',
        'WebSocket',
        "BinaryType",
        "Blob",
        "ErrorEvent",
        "FileReader",
        "MessageEvent",
        "ProgressEvent",
        "TcpSocket",
    ]

[features]
    default = ["console_error_panic_hook"]
