[package]
    name = "mxyz-engine"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"
    version = "0.1.0"

[dependencies]
    mxyz-config = { path="../mxyz-config" }
    mxyz-universe = { path="../mxyz-universe" }
    mxyz-utils = { path="../mxyz-utils" }
    rand = "0.8.5"

[dependencies.serde]
    version = "1.0"
    features = ["derive"]
