[package]
    name = "mxyz-network"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"
    version = "0.1.0"

[dependencies]
    bincode = "1.3.3"
    # mxyz-engine = { path = "../mxyz-engine" }  ! not working !
    mxyz-universe = { path = "../mxyz-universe" }
    mxyz-engine = { path = "../mxyz-engine" }

[dependencies.serde]
    features = ["derive"]
    version = "1.0"

