[package]
    name = "mxyz-server"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"
    version = "0.1.0"

[dependencies]
    diesel = "1.4.8"
    mxyz-engine = { path = "../mxyz-engine" }

[dependencies.rocket]
    features = ["json"]
    version = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
    features = ["tera"]
    version = "0.1.0-rc.1"

[dependencies.serde]
    features = ["derive"]
    version = "1.0"


