[workspace]
    default-members=[
        "mxyz-engine",  
    ]
    members = [
        "mxyz-client",
        "mxyz-client-engine",
        "mxyz-database",
        "mxyz-engine",
        "mxyz-engine-universe",
        "mxyz-network",
        "mxyz-server",
        "mxyz-server-engine",
        "utils",
    ]
