[workspace]
    default-members=[
        "mxyz-engine",  
    ]
    members = [
        "mxyz-client",
        "mxyz-client2",
        "mxyz-database",
        "mxyz-engine",
        "mxyz-engine-v1",
        "mxyz-engine-v2",
        "mxyz-network",
        "mxyz-server",
        "mxyz-utils",
    ]
