[package]
    name = "mxyz-client"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"

[lib]           
    crate-type = [
        "cdylib",  # for wasm
        "rlib"     # for wasm-testing
    ]  

[dependencies]
    console_error_panic_hook = { version = "0.1.6", optional = true }
    getrandom = { version = "0.2", features = ["js"] }
    # gloo-timers = "0.2.4"
    js-sys = "0.3"
    # mxyz-config = { path = "../mxyz-config" }
    mxyz-client-engine = { path = "../mxyz-client-engine" }
    mxyz-engine = { path = "../mxyz-engine" }
    mxyz-network = { path = "../mxyz-network" }
    mxyz-utils = { path = "../mxyz-utils" }
    # rand = "0.8.5"
    # rayon = "1.5"
    # reqwest = "0.11.11"
    # spmc = "0.3.0"
    wasm-bindgen = { version = "^0.2", features = ["nightly", "serde-serialize"] }
    wasm-bindgen-futures = "0.4"
    # wasm-futures-executor = "0.2.0"
    # wasm-bindgen-rayon = "1.0.3"
    # wasm-timer = "0.2.5"
    wee_alloc = { version = "0.4.5", optional = true }
    async-trait = "0.1.57"

[dependencies.web-sys]
    version = "0.3.55"
    features = [
        "BinaryType",
        "Blob",
        "CanvasRenderingContext2d",
        # "CssStyleDeclaration",
        "Document",
        "Element",
        "ErrorEvent",
        # "EventListener",
        # "EventTarget",
        "FileReader",
        # "HtmlButtonElement",
        "HtmlCanvasElement",
        "HtmlElement",
        # "HtmlOptionElement",
        # "HtmlParagraphElement",
        "MessageEvent",
        # "MouseEvent",
        "Node",
        "ProgressEvent",
        "TcpSocket",
        "WebSocket",
        "Window",
        "Worker",
        "console",
    ]

[features]
    default = ["console_error_panic_hook"]
