[package]
    name = "mxyz-client2"
    version = "0.1.0"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2021"

[dependencies]
    getrandom = { version = "0.2", features = ["js"] }
    gloo = "0.8.0"
    mxyz-engine = { path = "../mxyz-engine" }
    mxyz-client = { path = "../mxyz-client" }
    serde = "1.0.144"
    serde_json = "1.0.85"
    wasm-bindgen =  "^0.2"
    # wasm-bindgen = { version = "^0.2", features = ["nightly", "serde-serialize"] }
    # wasm-bindgen-futures = "0.4"
    yew = "0.19.3"
    yew-agent = "0.1.0"
    yew-router = "0.16.0"

[dependencies.stylist]
version = "0.10.1"
features = [
    "yew",
]

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "HtmlElement",
    "HtmlInputElement",
    "MouseEvent",
    "DomRect",  # for `get_bounding_client_rect` method.
]

