[package]
    name = "mxyz-database"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"
    version = "0.1.0"

[dependencies]
    dotenv = "0.15.0"
    # mxyz-config = { path = "../mxyz-config" }
    mxyz-utils = { path="../mxyz-utils" }
    mxyz-engine = { path="../mxyz-engine" }
    log = "0.4.17"

[dependencies.diesel]
    features = ["postgres"]
    version = "1.4.4"

[dependencies.serde]
    features = ["derive"]
    version = "1.0"
