[package]
    name = "mxyz-network"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"
    version = "0.1.0"

[dependencies]
    bincode = "1.3.3"
    # mxyz-config = { path = "../mxyz-config" }
    wasm-bindgen = { version = "^0.2", features = ["nightly", "serde-serialize"] }
    mxyz-engine = { path = "../mxyz-engine" }

[dependencies.serde]
    features = ["derive"]
    version = "1.0"

