[package]
    name = "mxyz-server"
    authors = ["Vincent C. Mader <vincent@mader.xyz>"]
    edition = "2018"
    version = "0.1.0"

[dependencies]
    bytes = "1.1.0"
    diesel = "1.4.8"
    futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
    log = "0.4"
    mxyz-database = { path = "../mxyz-database" }
    mxyz-engine = { path = "../mxyz-engine" }
    mxyz-network = { path = "../mxyz-network" }
    mxyz-server-engine = { path = "../mxyz-server-engine" }
    mxyz-client-engine = { path = "../mxyz-client-engine" }
    rayon = "1.5"
    rocket_contrib = "0.4.10"
    serde_json = "1.0"
    tokio-tungstenite = "0.17.1"
    tokio-util = "0.7.3"
    mxyz-utils = { path="../mxyz-utils" }
    websocket = "0.26.4"


[dependencies.futures]
    default-features = false
    version = "0.3.21"

[dependencies.rocket]
    features = ["json"]
    version = "0.5.0-rc.1"

[dependencies.rocket_dyn_templates]
    features = ["tera"]
    version = "0.1.0-rc.1"

[dependencies.serde]
    features = ["derive"]
    version = "1.0"

[dependencies.tokio]
    features = ["macros", "sync"]
    version = "1.19.2"

[dependencies.uuid]
    features = ["serde", "v4"]
    version = "0.4"
